// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render table of contents 1`] = `
<div>
  <div
    className="TOC"
  >
    <div>
      <input
        onChange={[Function]}
        placeholder="Filter by name"
        value="foo"
      />
    </div>
    <div>
      <p>
        <a
          href="https://github.com/policygenius/athenaeum"
        >
          GitHub
        </a>
      </p>
      <p>
        <a
          href="https://www.npmjs.com/package/athenaeum"
        >
          NPM
        </a>
      </p>
      <small>
        <a
          href="https://www.policygenius.com"
        >
          © 
          2017
           PolicyGenius
        </a>
      </small>
    </div>
  </div>
</div>
`;

exports[`should filter list when search field contains a query 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <_class
    items={
      Array [
        Object {
          "content": false,
          "heading": false,
          "name": "Button",
          "slug": "button",
        },
        Object {
          "content": false,
          "heading": false,
          "name": "Input",
          "slug": "input",
        },
        Object {
          "content": false,
          "heading": false,
          "name": "Textarea",
          "slug": "textarea",
        },
      ]
    }
  />
</_class>
`;

exports[`should filter list when search field contains a query 2`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <_class
    items={
      Array [
        Object {
          "content": false,
          "heading": false,
          "name": "Button",
          "slug": "button",
        },
        Object {
          "content": false,
          "heading": false,
          "name": "Input",
          "slug": "input",
        },
        Object {
          "content": false,
          "heading": false,
          "name": "Textarea",
          "slug": "textarea",
        },
      ]
    }
  />
</_class>
`;

exports[`should filter section names 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <_class
    items={
      Array [
        Object {
          "content": false,
          "heading": false,
          "name": "Introduction",
          "slug": "introduction",
        },
        Object {
          "components": Array [
            Object {
              "name": "Button",
              "slug": "button",
            },
          ],
          "content": <_class
            items={
                  Array [
                        Object {
                          "content": false,
                          "heading": false,
                          "name": "Button",
                          "slug": "button",
                        },
                      ]
            }
      />,
          "heading": true,
          "name": "Buttons",
          "slug": "buttons",
        },
        Object {
          "components": Array [
            Object {
              "name": "Input",
              "slug": "input",
            },
            Object {
              "name": "Textarea",
              "slug": "textarea",
            },
          ],
          "content": <_class
            items={
                  Array [
                        Object {
                          "content": false,
                          "heading": false,
                          "name": "Input",
                          "slug": "input",
                        },
                        Object {
                          "content": false,
                          "heading": false,
                          "name": "Textarea",
                          "slug": "textarea",
                        },
                      ]
            }
      />,
          "heading": true,
          "name": "Forms",
          "slug": "forms",
        },
      ]
    }
  />
</_class>
`;

exports[`should filter section names 2`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <_class
    items={
      Array [
        Object {
          "content": false,
          "heading": false,
          "name": "Introduction",
          "slug": "introduction",
        },
        Object {
          "components": Array [
            Object {
              "name": "Button",
              "slug": "button",
            },
          ],
          "content": <_class
            items={
                  Array [
                        Object {
                          "content": false,
                          "heading": false,
                          "name": "Button",
                          "slug": "button",
                        },
                      ]
            }
      />,
          "heading": true,
          "name": "Buttons",
          "slug": "buttons",
        },
        Object {
          "components": Array [
            Object {
              "name": "Input",
              "slug": "input",
            },
            Object {
              "name": "Textarea",
              "slug": "textarea",
            },
          ],
          "content": <_class
            items={
                  Array [
                        Object {
                          "content": false,
                          "heading": false,
                          "name": "Input",
                          "slug": "input",
                        },
                        Object {
                          "content": false,
                          "heading": false,
                          "name": "Textarea",
                          "slug": "textarea",
                        },
                      ]
            }
      />,
          "heading": true,
          "name": "Forms",
          "slug": "forms",
        },
      ]
    }
  />
</_class>
`;

exports[`should render a renderer 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <_class
    items={
      Array [
        Object {
          "content": false,
          "heading": false,
          "name": "Button",
          "slug": "button",
        },
        Object {
          "content": false,
          "heading": false,
          "name": "Input",
          "slug": "input",
        },
        Object {
          "content": false,
          "heading": false,
          "name": "Textarea",
          "slug": "textarea",
        },
      ]
    }
  />
</_class>
`;

exports[`should render renderer with sections with nested components 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <_class
    items={
      Array [
        Object {
          "content": false,
          "heading": false,
          "name": "Introduction",
          "slug": "introduction",
        },
        Object {
          "components": Array [
            Object {
              "name": "Button",
              "slug": "button",
            },
          ],
          "content": <_class
            items={
                  Array [
                        Object {
                          "content": false,
                          "heading": false,
                          "name": "Button",
                          "slug": "button",
                        },
                      ]
            }
      />,
          "heading": true,
          "name": "Buttons",
          "slug": "buttons",
        },
        Object {
          "components": Array [
            Object {
              "name": "Input",
              "slug": "input",
            },
            Object {
              "name": "Textarea",
              "slug": "textarea",
            },
          ],
          "content": <_class
            items={
                  Array [
                        Object {
                          "content": false,
                          "heading": false,
                          "name": "Input",
                          "slug": "input",
                        },
                        Object {
                          "content": false,
                          "heading": false,
                          "name": "Textarea",
                          "slug": "textarea",
                        },
                      ]
            }
      />,
          "heading": true,
          "name": "Forms",
          "slug": "forms",
        },
      ]
    }
  />
</_class>
`;
